--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bootstrap-vue": "^2.0.4",
         "lazysizes": "^5.1.1",
         "nuxt": "^2.0.0",
+        "sweetalert2": "^8.18.6",
         "vue": "^2.6.10",
         "vue-observe-visibility": "^0.4.6"
     },
