--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.3.6",
         "@nuxtjs/pwa": "^3.0.0-0",
+        "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.4",
         "lazysizes": "^5.1.1",
